<?xml version="1.0"?>
<package format="3">
  <name>cart_pole_bringup</name>
  <version>0.0.0</version>
  <description>Bringup for cart pole</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>cart_pole_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
