<?xml version="1.0"?>
<package format="3">
  <name>cart_pole_description</name>
  <version>0.0.0</version>
  <description>Cart pole robot description</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
